<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_light"
    tools:context=".ui.LoginAndSaved.SavedProfileFragment">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/addAppBar2"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:menu="@menu/profile_edit"
            app:title="Expense Manager" />

    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--                    <EditText-->
            <!--                        android:id="@+id/name"-->
            <!--                        android:layout_width="match_parent"-->
            <!--                        android:layout_height="wrap_content"-->
            <!--                        android:layout_marginStart="32dp"-->
            <!--                        android:layout_marginTop="225dp"-->
            <!--                        android:layout_marginEnd="32dp"-->
            <!--                        android:hint="name"-->
            <!--                        android:gravity="center"-->
            <!--                        android:textSize="25sp"-->
            <!--                        app:layout_constraintEnd_toEndOf="parent"-->
            <!--                        app:layout_constraintStart_toStartOf="parent"-->
            <!--                        app:layout_constraintTop_toTopOf="parent" />-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_saved"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="25dp"
                android:textColorHint="@color/color_white"
                app:startIconTint="@color/color_white"
                android:hint="@string/frag_profile_user_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtVieFgProfYourBudget">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@android:color/primary_text_dark" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--        <EditText-->
            <!--            android:id="@+id/budget"-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:layout_marginStart="32dp"-->
            <!--            android:layout_marginTop="32dp"-->
            <!--            android:layout_marginEnd="32dp"-->
            <!--            android:gravity="center"-->
            <!--            android:text="Budget"-->
            <!--            android:textSize="25sp"-->
            <!--            app:layout_constraintEnd_toEndOf="parent"-->
            <!--            app:layout_constraintStart_toStartOf="parent"-->
            <!--            app:layout_constraintTop_toBottomOf="@+id/name" />-->

            <!--        <EditText-->
            <!--            android:id="@+id/income"-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:layout_marginStart="32dp"-->
            <!--            android:layout_marginTop="32dp"-->
            <!--            android:layout_marginEnd="32dp"-->
            <!--            android:text="Income"-->
            <!--            android:textSize="25sp"-->
            <!--            android:gravity="center"-->
            <!--            app:layout_constraintEnd_toEndOf="parent"-->
            <!--            app:layout_constraintStart_toStartOf="parent"-->
            <!--            app:layout_constraintTop_toBottomOf="@+id/budget" />-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/budget_saved"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="25dp"
                android:textColorHint="@color/color_white"
                app:startIconTint="@color/color_white"
                android:hint="@string/frag_profile_monthly_budget"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_saved">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/income_saved"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="25dp"
                android:textColorHint="@color/color_white"
                app:startIconTint="@color/color_white"
                android:hint="@string/frag_profile_income"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/budget_saved">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txtVieFgProfYourBudget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="140dp"
                android:layout_marginEnd="32dp"
                android:gravity="center"
                android:text="@string/frag_profile_your_budget"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/color_two"
                android:text="@string/frag_profile_btn_save"
                android:textSize="25sp"
                app:cornerRadius="26dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/income_saved" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</FrameLayout>